syntax = "proto3";

package neuros;

// A generic event emitted by a sensor.  Each event contains
// identifying information along with a payload encoded as bytes.  In
// practice the payload may itself be another Protobuf message
// representing a sample of EEG, imaging data or other modality.
message BrainEvent {
  string subject_id = 1;
  string session_id = 2;
  string sensor_id = 3;
  string modality = 4;
  uint64 timestamp_ns = 5;
  uint64 seq = 6;
  bytes payload = 7;
  map<string, string> meta = 8;
}